# parakeet-semantic-search

./: .dockerignore  .gitignore  CHANGELOG.md  CONVERSATION_SUMMARY.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  PHASE_1_COMPLETION_REPORT.md  PHASE_1_INDEX.md  PHASE_3_COMPLETION.md  PROJECT_REVIEW.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES.md  REST_API.md  STREAMLIT_README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
apps/: __init__.py  fastapi_app.py  streamlit_app.py
apps/pages/: 1_🔍_Search.py  2_💡_Recommendations.py  3_📊_Analytics.py  4_⚙️_Settings.py
apps/utils/: __init__.py  export_utils.py  search_utils.py
docs/: ADR.md  ARCHITECTURE.md  BENCHMARKS.md  CONTRIBUTING.md  DATA_INGESTION.md  DEPLOYMENT.md  DOCKER.md  EVALUATION.md  GITHUB_ISSUES.md  IMPLEMENTATION_PLAN.md  USAGE.md
notebooks/: README.md  exploratory_analysis.ipynb
scripts/: chunk_transcripts.py  create_github_issues.sh  embed_and_store.py  ingest_from_duckdb.py
src/parakeet_search/: __init__.py  api.py  cli.py  clustering.py  embeddings.py  evaluation.py  models.py  optimization.py  search.py  vectorstore.py
tests/: __init__.py  conftest.py  evaluation_dataset.py  fixtures.py  test_api.py  test_benchmarks.py  test_chunking.py  test_cli.py  test_clustering.py  test_data_ingestion.py  test_embed_and_store.py  test_embeddings.py  test_evaluation.py  test_integration.py  test_models.py  test_optimization.py  test_recommendations.py  test_search.py  test_vectorstore.py
