[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parakeet-semantic-search"
version = "0.1.0"
description = "Semantic search and recommendation engine for podcast transcripts"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Julien Pequegnot"}]
keywords = ["podcast", "search", "embeddings", "semantic", "ml"]

[project.urls]
Homepage = "https://github.com/yourusername/parakeet-semantic-search"
Repository = "https://github.com/yourusername/parakeet-semantic-search"
Issues = "https://github.com/yourusername/parakeet-semantic-search/issues"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html"
